logs/flask-dashed.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Dashed-0.1b2.egg-info'...
Listing './lib/python3.5/site-packages/Flask_WTF-0.14.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WTForms-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_dashed'...
Listing './lib/python3.5/site-packages/flask_dashed/ext'...
Listing './lib/python3.5/site-packages/flask_dashed/static'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/iconic'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/lib'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/lib/nib'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/lib/nodes'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/test'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/test/cases'...
Listing './lib/python3.5/site-packages/flask_dashed/static/css/vendor/nib/test/public'...
Listing './lib/python3.5/site-packages/flask_dashed/static/images'...
Listing './lib/python3.5/site-packages/flask_dashed/templates'...
Listing './lib/python3.5/site-packages/flask_dashed/templates/flask_dashed'...
Listing './lib/python3.5/site-packages/flask_wtf'...
Listing './lib/python3.5/site-packages/flask_wtf/recaptcha'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/flask_dashed'...
Listing './lib/python3.5/site-packages/tests/flask_dashed/ext'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/wtforms'...
Listing './lib/python3.5/site-packages/wtforms/ext'...
Listing './lib/python3.5/site-packages/wtforms/ext/appengine'...
Listing './lib/python3.5/site-packages/wtforms/ext/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext/dateutil'...
Listing './lib/python3.5/site-packages/wtforms/ext/django'...
Listing './lib/python3.5/site-packages/wtforms/ext/django/templatetags'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/en'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/es'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/fa'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/it'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/pl'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/zh'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n/messages/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/ext/sqlalchemy'...
Listing './lib/python3.5/site-packages/wtforms/fields'...
Listing './lib/python3.5/site-packages/wtforms/widgets'...
Listing './share'...
Listing './share/python-wheels'...
